template numbering removed

--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -97,9 +97,9 @@ cd eosfactory
 And then run those three tests:
 
 ```bash
-python3 tests/01_hello_world.py
-python3 tests/02_eosio_token.py
-python3 tests/03_tic_tac_toe.py
+python3 tests/hello_world.py
+python3 tests/eosio_token.py
+python3 tests/tic_tac_toe.py
 ```
 ## Install from PyPi repository
 
@@ -207,7 +207,7 @@ Next, note the entries of the value `null`. Some of them signal configuration er
 
 ### Verify command lines
 
-Technically, EOSFactory wraps EOSIO executables -- namely `cleos`, `keos`, `nodeos` -- with its own API. Therefore, in error conditions, it make sense to inspect command lines sent to the EOSIO executables. The boolean variable `eosfactory.core.setup.is_print_command_line` sets the debug status. For example, if deployment of the contract in the test script `01_hello_world.py` fails, modify the script:
+Technically, EOSFactory wraps EOSIO executables -- namely `cleos`, `keos`, `nodeos` -- with its own API. Therefore, in error conditions, it make sense to inspect command lines sent to the EOSIO executables. The boolean variable `eosfactory.core.setup.is_print_command_line` sets the debug status. For example, if deployment of the contract in the test script `hello_world.py` fails, modify the script:
 
 ```python
         import eosfactory.core.setup as setUp   ## added
@@ -230,7 +230,7 @@ WASM file writen to file:
 
 ### Verify communication with `cleos`
 
-EOSFactory offers another debugging tool: printing requests send by `cleos` to nodeos, and responses from nodeos. For example, if deployment of the contract in the test script 01_hello_world.py fails, modify the script:
+EOSFactory offers another debugging tool: printing requests send by `cleos` to nodeos, and responses from nodeos. For example, if deployment of the contract in the test script hello_world.py fails, modify the script:
 
 ```python
         import eosfactory.core.setup as setUp   ## added
