--- a/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -129,13 +129,13 @@ create_account("host", master)
 And then create a reference to the contract by supplying the host account and the path to the folder where the contract is located, for example:
 
 ```python
-contract = Contract(host, "/mnt/d/Workspaces/EOS/eosfactory/contracts/02_eosio_token")
+contract = Contract(host, "/mnt/d/Workspaces/EOS/eosfactory/contracts/eosio_token")
 ```
 
 Alternatively, supply just the name of the folder, if it can be found in the standard location, i.e. `eosfactory/contracts`, for example:
 
 ```python
-contract = Contract(host, "02_eosio_token")
+contract = Contract(host, "eosio_token")
 ```
 
 ## Build the contract
