--- a/docs/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
+++ b/docs/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
@@ -27,10 +27,10 @@ from eosfactory.eosf import *
 To create a new contract from a pre-defined template all you need is a name for the contract and the name of the template, for example:
 
 ```python
-project_path = project_from_template("foo", template="01_hello_world")
+project_path = project_from_template("foo", template="hello_world")
 ```
 
-**NOTE:** Do not use spaces in contract names. What is allowed are letters, numbers, underscores `_`, dots `.` and dashes `- `. Regarding the second parameter, as of now there are three templates to choose from (i.e. `01_hello_world`, `02_eosio_token` and `03_tic_tac_toe`), with more coming in the future. This parameter is optional, the default value is `01_hello_world`.
+**NOTE:** Do not use spaces in contract names. What is allowed are letters, numbers, underscores `_`, dots `.` and dashes `- `. Regarding the second parameter, as of now there are three templates to choose from (i.e. `hello_world`, `eosio_token` and `tic_tac_toe`), with more coming in the future. This parameter is optional, the default value is `hello_world`.
 
 ## Create reference to an existing contract
 
@@ -49,7 +49,7 @@ contract_builder_foo = ContractBuilder("foo")
 In a similar way, you can access demo contracts shipped with *EOSFactory*, for example:
 
 ```python
-contract_builder_hello = ContractBuilder("01_hello_world")
+contract_builder_hello = ContractBuilder("hello_world")
 ```
 
 ## Edit the source code
@@ -143,7 +143,7 @@ contract_foo.deploy()
 **NOTE:** In a similar way you could deploy a demo contract supplied by *EOSFactory*, for example:
 
 ```python
-contract_hello = Contract(host, "01_hello_world")
+contract_hello = Contract(host, "hello_world")
 contract_hello.deploy()
 ```
 
