--- a/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -22,14 +22,14 @@ In a bash terminal run the following command:
 
 ```bash
 cd eosfactory
-python3 -m eosfactory.create_project foo_bar 01_hello_world
+python3 -m eosfactory.create_project foo_bar hello_world
 ```
 
 **NOTE:** If you are on Windows and have not restarted your WSL bash terminal after *EOSFactory* installation, you'll need to do so before you execute this command (if you are using WSL bash terminal inside *Visual Studio Code*, restart your VSC instead).
 
 The first parameter (in our case `foo_bar`) is the name of your contract. It can be any name you want, provided there are no spaces in it. Letters, numbers, underscores `_`, dots `.` and dashes `-` are allowed.
 
-The second parameter (in our case `01_hello_world`) denotes the template from which the new contract will be created. As of now there are three templates to choose from (i.e. `01_hello_world`, `02_eosio_token` and `03_tic_tac_toe`), with more coming in the future. This parameter is optional, the default value is `01_hello_world`.
+The second parameter (in our case `hello_world`) denotes the template from which the new contract will be created. As of now there are three templates to choose from (i.e. `hello_world`, `eosio_token` and `tic_tac_toe`), with more coming in the future. This parameter is optional, the default value is `hello_world`.
 
 ## Open the new project in *Visual Studio Code*
 
@@ -39,7 +39,7 @@ Alternatively, you can add the `--vsc` option to the command and then VSC will l
 
 ```bash
 cd eosfactory
-python3 -m eosfactory.create_project foo_bar 01_hello_world --vsc
+python3 -m eosfactory.create_project foo_bar hello_world --vsc
 ```
 
 ## Folder structure
@@ -221,7 +221,7 @@ You can also make use of VSC [IntelliSense](https://code.visualstudio.com/docs/e
 
 As *EOSFactory* gets upgraded, it will include further libraries that enhance the process of smart-contract development. Here we present one of such features in action: the logging tool. It's quite important, as using loggers is actually the only way to debug smart contracts.
 
-You might have noticed the `logger.hpp` header file in the `src` directory. And if you have applied the `01_hello_world` template when creating your VSC project, you'll also notice the following line in the `contract.name.cpp` file:
+You might have noticed the `logger.hpp` header file in the `src` directory. And if you have applied the `hello_world` template when creating your VSC project, you'll also notice the following line in the `contract.name.cpp` file:
 
 ```cpp
 logger_info( "debug user name: ", name{user} );
@@ -233,7 +233,7 @@ The effect of the above code entry is the following output in test results:
 INFO debug user name: carol @ 8:53:50 contract.name.cpp[17](hi)
 ```
 
-A similar example can be found in the `02_eosio_token` template:
+A similar example can be found in the `eosio_token` template:
 
 ```cpp
 logger_info("quantity.amount: ", quantity.amount);
