--- a/docs/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/tutorials/05.InteractingWithPublicTestnet.md
@@ -141,12 +141,12 @@ mykylin:   xlg3pao3idlq @ https://api.kylin.alohaeos.com
 Create a new smart-contract project:
 
 ```bash
-python3 -m eosfactory.create_project foo_bar 03_tic_tac_toe
+python3 -m eosfactory.create_project foo_bar tic_tac_toe
 ```
 
 **NOTE:** The first parameter is the name of your project (and it's also the name of the smart-contract itself), whereas the second parameter is the name of the template being used for project creation. For more details about this command please refer to [Working With EOS Contracts Using EOSFactory In VSC](04.WorkingWithEOSContractsUsingEOSFactoryInVSC.html).
 
-**NOTE:** As of now only the `03_tic_tac_toe` template supports the public testnet interactions.
+**NOTE:** As of now only the `tic_tac_toe` template supports the public testnet interactions.
 
 As a result, you should get a message similar to this:
 
