--- a/docs/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
+++ b/docs/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
@@ -30,7 +30,7 @@ To create a new contract from a pre-defined template all you need is a name for 
 project_path = project_from_template("foo", template="hello_world")
 ```
 
-**NOTE:** Do not use spaces in contract names. What is allowed are letters, numbers, underscores `_`, dots `.` and dashes `- `. Regarding the second parameter, as of now there are three templates to choose from (i.e. `hello_world`, `eosio_token` and `tic_tac_toe`), with more coming in the future. This parameter is optional, the default value is `hello_world`.
+>**NOTE:** Do not use spaces in contract names. What is allowed are letters, numbers, underscores `_`, dots `.` and dashes `- `. Regarding the second parameter, as of now there are three templates to choose from (i.e. `hello_world`, `eosio_token` and `tic_tac_toe`), with more coming in the future. This parameter is optional, the default value is `hello_world`.
 
 ## Create reference to an existing contract
 
@@ -140,7 +140,7 @@ Next, we can deploy the contract:
 contract_foo.deploy()
 ```
 
-**NOTE:** In a similar way you could deploy a demo contract supplied by *EOSFactory*, for example:
+>**NOTE:** In a similar way you could deploy a demo contract supplied by *EOSFactory*, for example:
 
 ```python
 contract_hello = Contract(host, "hello_world")
@@ -174,11 +174,10 @@ contract_foo.push_action("hi", {"user":alice}, permission=carol)
 contract_foo.push_action("hi", {"user":carol}, permission=alice)
 ```
 
-**NOTE:** The `push_action` method takes three parameters:
-
-* the name of the action, e.g. `"hi"`,
-* the data required by the action, e.g. `{"user":alice}`,
-* the permissions required by the action, e.g. `alice`.
+>**NOTE:** The `push_action` method takes three parameters:
+>* the name of the action, e.g. `"hi"`,
+>* the data required by the action, e.g. `{"user":alice}`,
+>* the permissions required by the action, e.g. `alice`.
 
 Regarding permissions, *EOSFactory* offers several options:
 
@@ -200,7 +199,7 @@ contract_foo.push_action("hi", {"user":alice}, permission=[(alice, Permission.AC
 
 All the above variations should work, as the contract allows anyone to authorize the `hi` action.
 
-**NOTE:** Among other things, the console displays a debugger output, for example:
+>**NOTE:** Among other things, the console displays a debugger output, for example:
 
 ```bash
 INFO debug user name: alice @ 12:26:05 hello.world.cpp[17](hi)
@@ -261,7 +260,7 @@ When your are done your contract, you might want to delete it from your workspac
 contract_foo.delete()
 ```
 
-**NOTE:** The above command removes the entire folder.
+>**NOTE:** The above command removes the entire folder.
 
 To stop the testnet:
 
