--- a/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -25,7 +25,7 @@ cd eosfactory
 python3 -m eosfactory.create_project foo_bar hello_world
 ```
 
-**NOTE:** If you are on Windows and have not restarted your WSL bash terminal after *EOSFactory* installation, you'll need to do so before you execute this command (if you are using WSL bash terminal inside *Visual Studio Code*, restart your VSC instead).
+>**NOTE:** If you are on Windows and have not restarted your WSL bash terminal after *EOSFactory* installation, you'll need to do so before you execute this command (if you are using WSL bash terminal inside *Visual Studio Code*, restart your VSC instead).
 
 The first parameter (in our case `foo_bar`) is the name of your contract. It can be any name you want, provided there are no spaces in it. Letters, numbers, underscores `_`, dots `.` and dashes `-` are allowed.
 
@@ -41,6 +41,9 @@ Alternatively, you can add the `--vsc` option to the command and then VSC will l
 cd eosfactory
 python3 -m eosfactory.create_project foo_bar hello_world --vsc
 ```
+
+>**NOTE** With the WSL (Windows Subsystem Unix), VSCode starts as a Windows application. Therefore a result of the above call is strange if VSCode has not access rights to the contract workspace.<br>
+The directory of the contract workspace can be seen and set with the command `python3 -m eosfactory.config --workspace`.
 
 ## Folder structure
 
@@ -58,7 +61,7 @@ What you get is a complete smart-contract workspace with clear separation betwee
   definitions, etc.
 - `CMakeLists.txt` file, CMake definitions.
 
-**NOTE:** You are free to change the literals, e.g. you can change the name of `test1` to some other name, but if you do so you'll also have to update both the `CMakeLists.txt` and `.vscode/tasks.json` files.
+>**NOTE:** You are free to change the literals, e.g. you can change the name of `test1` to some other name, but if you do so you'll also have to update both the `CMakeLists.txt` and `.vscode/tasks.json` files.
 
 ## Use *CMake* in *Visual Studio Code*
 
@@ -81,23 +84,9 @@ cmake ..
 The output should look like this:
 
 ```bash
--- The C compiler identification is GNU 7.3.0
--- The CXX compiler identification is GNU 7.3.0
--- Check for working C compiler: /usr/bin/cc
--- Check for working C compiler: /usr/bin/cc -- works
--- Detecting C compiler ABI info
--- Detecting C compiler ABI info - done
--- Detecting C compile features
--- Detecting C compile features - done
--- Check for working CXX compiler: /usr/bin/c++
--- Check for working CXX compiler: /usr/bin/c++ -- works
--- Detecting CXX compiler ABI info
--- Detecting CXX compiler ABI info - done
--- Detecting CXX compile features
--- Detecting CXX compile features - done
 -- Configuring done
 -- Generating done
--- Build files have been written to: /mnt/d/Workspaces/EOS/contracts/contract.name/build
+-- Build files have been written to: /mnt/c/Workspaces/EOS/contracts/foo_bar/build
 ```
 
 #### Build
@@ -111,13 +100,15 @@ make
 The output should look like this:
 
 ```bash
-Scanning dependencies of target abi
-Built target abi
-Scanning dependencies of target wasm
-Built target wasm
+Scanning dependencies of target wast
+ABI file writen to file: 
+    /mnt/c/Workspaces/EOS/contracts/foo_bar/build/foo_bar.abi
+WASM file writen to file: 
+    /mnt/c/Workspaces/EOS/contracts/foo_bar/build/foo_bar.wasm
+Built target wast
 ```
 
-**NOTE:** If the `ABI` file already exists in the `src` folder (you should keep it there, if you prefer to create it manually instead of relying on the *EOSIO* toolset) *CMake* will skip the `ABI` file generation step and proceed with `WASM` file generation.
+>**NOTE:** If the `ABI` file already exists in the `src` folder (you should keep it there, if you prefer to create it manually instead of relying on the *EOSIO* toolset) *CMake* will skip the `ABI` file generation step and proceed with `WASM` file generation.
 
 #### Unit tests
 
@@ -127,19 +118,7 @@ And finally, after your contract has been successfully built, invoke unit tests 
 ctest
 ```
 
-If you want to make your unit tests more verbose, use the `-V` parameter:
-
-```bash
-ctest -V
-```
-
-And if you want to be more specific about which unit tests should be run, you can use the `-R` parameter which allows you to supply a regular expression indicating specific criteria regarding the names of the tests to be run, for example:
-
-```bash
-ctest -R ^test$
-```
-
-The outcome of the unit test (in the non-verbose mode) should look like this:
+The outcome of the unit test should look like this:
 
 ```bash
 Test project /mnt/d/Workspaces/EOS/contracts/contract.name/build
@@ -153,9 +132,15 @@ Test project /mnt/d/Workspaces/EOS/contracts/contract.name/build
 Total Test time (real) =  19.92 sec
 ```
 
-**NOTE:** As you might have noticed, there are two types of unit tests: the standard ones (named *unittest1*, *unittest2*, etc) and ad-hoc ones (named *test1*, *test2*, etc). The reason for this duality is this: we find it useful to have standard unit tests to prove that things work as expected, and ad-hoc tests to investigate bugs and generally monitor the inner workings of a smart-contract. *EOSFactory* supports both, so you can choose whatever suits your needs.
+And if you want to be more specific about which unit tests should be run, you can use the `-R` parameter which allows you to supply a regular expression indicating specific criteria regarding the names of the tests to be run, for example:
 
-Also, please note that an alternative way to run the tests is to invoke them as a Python executable file, for example:
+```bash
+ctest -R ^test$
+```
+
+>**NOTE:** As you might have noticed, there are two types of unit tests: the standard ones (named *unittest1*, *unittest2*, etc) and ad-hoc ones (named *test1*, *test2*, etc). The reason for this duality is this: we find it useful to have standard unit tests to prove that things work as expected, and ad-hoc tests to investigate bugs and generally monitor the inner workings of a smart-contract. *EOSFactory* supports both, so you can choose whatever suits your needs.
+
+Also, please note that an alternative way to run the tests is to invoke them as a Python executable file, for example, assuming bash in the root directory:
 
 ```bash
 python3 tests/test1.py
@@ -215,7 +200,7 @@ You can also make use of VSC [IntelliSense](https://code.visualstudio.com/docs/e
 
 ![intelisense](../images/intelisense.png)
 
-**NOTE:** For that to work you'll need to install the C/C++ IntelliSense extension in VSC.
+>**NOTE:** For that to work you'll need to install the C/C++ IntelliSense extension in VSC.
 
 ## Debug with smart loggers
 
@@ -247,7 +232,7 @@ INFO quantity.amount: 250000 @ 13:29:17 contract.name.cpp[88](transfer)
 
 Thus the logger utility offers you much more than just a way of monitoring the value of a variable. What you also get is the method name, the file name and the line number where this logger event occurred.
 
-**NOTE:** For the logger output to be visible in the console, make sure that your unit test contains the `Verbosity.DEBUG` flag as part of the `Logger.verbosity` options, for example:
+>**NOTE:** For the logger output to be visible in the console, make sure that your unit test contains the `Verbosity.DEBUG` flag as part of the `Logger.verbosity` options, for example:
 
 ```python
 from eosfactory.eosf import *
