--- a/docs/tutorials/00.IntroductionToEOSFactory.md
+++ b/docs/tutorials/00.IntroductionToEOSFactory.md
@@ -2,8 +2,6 @@
 
 [EOSFactory](https://github.com/tokenika/eosfactory) is a Python-based [EOS](https://eos.io) smart-contract development & testing framework, created by [TOKENIKA](https://tokenika.io).
 
-The goal is to achieve a similar functionality to Ethereum's [Truffle Framework](http://truffleframework.com/).
-
 With a single command-line interface you can create a private testnet and then compile, test and deploy EOS smart-contracts.
 
 All of this using simple yet powerful [Python3](https://www.python.org/) syntax.
@@ -22,7 +20,7 @@ The front-end of *EOSFactory* is simply a Python3 Command Line Interface. This w
 
 #### 2. Real testnet
 
-As EOS full node is very quick we don't need to rely on a testnet simulator similar to [TestRPC](https://github.com/trufflesuite/ganache-cli) in Ethereum. Instead, we can work with a real testnet (both local and remote) and this makes testing much more reliable. Thus *EOSFactory* lets you fully test your smart-contract in a couple of seconds and do it over and over again without much hassle.
+We can work with a real testnet (both local and remote) and this makes testing  reliable. Thus *EOSFactory* lets you fully test your smart-contract in a couple of seconds and do it over and over again without much hassle.
 
 #### 3. Truly cross-platform
 
