--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -8,7 +8,7 @@ We've tested *EOSFactory* on the following platforms:
 - MacOS 10.13 (High Sierra)
 - Windows 10 (version 1803)
 
-**NOTE:** *EOSFactory* is compatible with *EOSIO* [v1.6.0](https://github.com/EOSIO/eos/releases/tag/v1.6.0).
+>**NOTE:** *EOSFactory* is compatible with *EOSIO* [v1.6.0](https://github.com/EOSIO/eos/releases/tag/v1.6.0).
 
 ## General prerequisites
 
@@ -16,26 +16,26 @@ We assume that you have successfully installed [*EOSIO*](https://github.com/EOSI
 
 *EOSIO* deployed in Docker is NOT supported.
 
-Also, we assume that you have installed [*eosio.cdt*](https://github.com/EOSIO/eosio.cdt) v1.41. Binary installation suffices.
+Also, we assume that you have installed [*eosio.cdt*](https://github.com/EOSIO/eosio.cdt) v1.5.0. Binary installation suffices.
 
 ## Prerequisites for Ubuntu & MacOS
 
 * We assume you have installed [Python 3.5](https://www.python.org/downloads/release/python-356/) (or higher).
-* We assume you have installed [pip 18.1](https://pypi.org/project/pip/) (or higher).
+* We assume you have installed [pip3 18.1](https://pypi.org/project/pip/) (or higher).
 
 ## Prerequisites for Windows
 
 - We assume that you have [*Windows Subsystem for Linux - Ubuntu 18.04*](https://www.microsoft.com/en-us/p/ubuntu-1804/9n9tngvndl3q) installed.
 - Both EOSIO and eosio.cdt are installed to the Windows Ubuntu bash. If you want to compile them from sources, we recommend that they are cloned in the Windows file structure, taking advantage of the fact that the entire Windows file structure is fully accessible in WSL.
 - And finally, we assume you have [Python 3.5](https://www.python.org/downloads/release/python-356/) (or higher) available in your WSL, but this condition is likely to be already satisfied, as WSL ships with Python 3.6.5 by default. Also make sure your WSL has [pip 18.1](https://pypi.org/project/pip/) (or higher) installed.
+- It is advisable to have Python installed on the Windows side, as well: this enables using a linter with the scripts on the Ubuntu side.
 
 ## Python dependencies
 
 EOSFactory depends on the following not standard Python packages:
 
 ```bash
-pip3 install termcolor
-pip3 install setuptools
+pip3 install --user termcolor
 ```
 
 ## Install on Ubuntu & MacOS
@@ -86,9 +86,13 @@ When prompted, supply the path pointing to the location of your smart-contract w
 
 ## Verify the installation
 
-Now let's verify that EOSFactory works and is properly hooked up to *EOSIO*.
+Now let's verify that EOSFactory works and is properly hooked up to *EOSIO*:
 
-First, make sure your working directory is switched to `eosfactory`:
+```bash
+python3 -m eosfactory.config
+```
+
+Now, you can try tests. Make sure your working directory is switched to `eosfactory`:
 
 ```bash
 cd eosfactory
@@ -101,14 +105,22 @@ python3 tests/hello_world.py
 python3 tests/eosio_token.py
 python3 tests/tic_tac_toe.py
 ```
-## Install from PyPi repository
 
-The current edition supports installation with the Python pip system. However, EOSFactory installed as a plain Python module is stripped of the shell utilities that come with the GitHub repository, mentioned above:
+## Install from PyPi repository
+The current edition supports installation with the pip3 installer. EOSFactory installed as a plain Python module is stripped of the goods that come with the GitHub repository, mentioned above:
 
 * test scripts,
 * tutorials, some of them executable.
 
-The versions, GitHub and PyPi are identical in the code. They differ in their data folders. The configuration of any one can be printed with the command:
+Instead, the EOSFactory library can be used as a staring point for user's extensions.
+
+You can install the PyPi EOSFactory with the `pip3` command:
+
+```bash
+pip3 install eosfactory
+```
+
+The versions, GitHub and PyPi are identical in the code. They differ in their data folders. The configuration of can be printed with the command:
 
 ```bash
 python3 -m eosfactory.config
@@ -120,7 +132,7 @@ In the printout, you cen see a note about the nature of the active package:
 EOSFactory version 2.1.3.
 Dependencies:
 https://github.com/EOSIO/eos version 1.6.0
-https://github.com/EOSIO/eosio.cdt version 1.4.1
+https://github.com/EOSIO/eosio.cdt version 1.5.0
 Python version 3.5 or higher
 
         EOSFactory is installed as a Python package.
@@ -133,12 +145,23 @@ The current configuration of EOSFactory:
 ..........................................
 ..........................................
 ```
-where the message *EOSFactory is installed as a Python package.* indicates the PyPi origin.
+where the message *EOSFactory is installed as a Python package* indicates the PyPi origin.
 
+## Uninstalling
 
-You can install the pypi EOSFactory with the usual `pip` command:
+Make sure your working directory is switched to `eosfactory`:
+
 ```bash
-pip3 install eosfactory
+cd eosfactory
+```
+Then
+
+```bash
+./uninstall.sh
+```
+or
+```bash
+pip3 uninstall eosfactory-tokenika
 ```
 
 ## Troubleshooting specific errors
@@ -204,6 +227,15 @@ The current configuration of EOSFactory:
 ```
 
 Next, note the entries of the value `null`. Some of them signal configuration errors.
+
+### Enable error traceback
+
+Normally, error messages do not involve traceback. You can enable tracebacking:
+
+```python
+import eosfactory.core.setup as setup
+setup.is_raise_error = True
+```
 
 ### Verify command lines
 
