--- a/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -28,6 +28,7 @@ To start your own single-node local testnet:
 ```python
 reset()
 ```
+Besides starting a reset `nodeos` executable, the command reset() cleans EOSFactory: deletes account objects, wallets, etc.
 
 On MacOS the *EOSIO* process is run in the background with no visible interface. However in Ubuntu & Windows it's launched in a separate window.
 
@@ -71,13 +72,13 @@ Next, create a master account from which other accounts can be created:
 create_master_account("master")
 ```
 
-As a result, a global variable called `master` (or whatever name you pass as the parameter) is created and from now on you can use it anywhere in the code, for example:
+As a result, a global (in the current script) variable called `master` (or whatever name you pass as the parameter) is created and from now on you can use it anywhere in the code, for example:
 
 ```python
 master.info()
 ```
 
-**NOTE:** The name `master` is just a name of a global variable, not the actual name of the account created on the blockchain.
+>**NOTE:** The name `master` is just a name of a variable, not the actual name of the account created on the blockchain. The actual (physical) name of the account is `str(master)`.
 
 You don't need to worry about locking or unlocking the wallet, managing its password or importing private keys into it. All of this is being taken care of by EOS Factory behind the scenes.
 
@@ -89,13 +90,22 @@ If you need to create test accounts, here is how you do it:
 create_account("charlie", master)
 ```
 
-Again, a global variable, this time called `charlie`, is created and from now on you can use it anywhere in the code, for example:
+> A lot actions happen:
+>* the given account name is checked for uniqueness, if positive, break;
+>* a random physical name of the new account is determined;
+>* two pairs of cryptographic keys are produced;
+>* a wallet is opened and unlocked;
+>* two private keys are imported to the wallet;
+>* a new account is send to the blockchain;
+>* confirmation from the blockchain is received.
+
+Again, a global (in the current script) variable, this time called `charlie`, is created and from now on you can use it anywhere in the code, for example:
 
 ```python
 charlie.info()
 ```
 
-**NOTE:** If you don't specify the `account_name` parameter in `create_account()`, a random name is applied, which is useful on a public testnet where extra restrictions apply.
+>**NOTE:** If you don't specify the `account_name` parameter in `create_account()` which is the third parameter, a random name is applied, which is useful on a public testnet where extra restrictions apply. You can see it: `str(charlie)`
 
 However, if you want to assign a specific name to an account, you can still do it, for example:
 
@@ -103,7 +113,7 @@ However, if you want to assign a specific name to an account, you can still do i
 create_account("charlie2", master, account_name="charlie4eos")
 ```
 
-**NOTE:** You cannot create the same account variable twice, that's why we use a different name for the variable to be created, i.e. `charlie2`.
+>**NOTE:** You cannot create the same account variable twice (EOSFactory protect yourself against non-uniqueness), that's why we use a different name for the variable to be created, i.e. `charlie2`.
 
 And then run the `info()` command to verify that the `charlie4eos` name is actually assigned to the account referenced by the `charlie2` variable:
 
@@ -182,9 +192,9 @@ host.push_action(
     }, [master, host])
 ```
 
-**NOTE:** The `push_action` method takes three arguments: the action's name, the action's arguments in JSON format and the accounts whose permission is needed, in this case `master` & `host`.
+>**NOTE:** The `push_action` method takes three arguments: the action's name, the action's arguments in JSON format and the accounts whose permission is needed, in this case `master` & `host`.
 
-**NOTE:** If you want to see the actual transaction without broadcasting it, use the `show_action` method instead of `push_action`, for example:
+>**NOTE:** If you want to see the actual transaction without broadcasting it, use the `show_action` method instead of `push_action`, for example:
 
 ```python
 host.show_action(
@@ -220,7 +230,7 @@ host.push_action(
     master)
 ```
 
-**NOTE:** In this case the permission is assigned to the default `master` account.
+>**NOTE:** In this case the permission is assigned to the default `master` account.
 
 ## Transfer tokens
 
@@ -236,7 +246,7 @@ host.push_action(
     alice)
 ```
 
-**NOTE:** As the third argument we pass the reference to the `alice` account to indicate that she is the one who authorized this action.
+>**NOTE:** As the third argument we pass the reference to the `alice` account to indicate that she is the one who authorized this action.
 
 ## Check the contract table
 
@@ -252,7 +262,7 @@ host.table("accounts", alice)
 host.table("accounts", carol)
 ```
 
-**NOTE:** The `table()` method takes two arguments: the name of the table as specified by the contract ABI and the scope within the contract in which the table is found.
+>**NOTE:** The `table()` method takes two arguments: the name of the table as specified by the contract ABI and the scope within the contract in which the table is found.
 
 This is the result you should get for `alice`:
 
