--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -108,7 +108,6 @@ python3 tests/tic_tac_toe.py
 
 ## Install from PyPi repository
 The current edition supports installation with the pip3 installer. EOSFactory installed as a plain Python module is stripped of the goods that come with the GitHub repository, mentioned above:
-
 * test scripts,
 * tutorials, some of them executable.
 
@@ -239,7 +238,7 @@ setup.is_raise_error = True
 
 ### Verify command lines
 
-Technically, EOSFactory wraps EOSIO executables -- namely `cleos`, `keos`, `nodeos` -- with its own API. Therefore, in error conditions, it make sense to inspect command lines sent to the EOSIO executables. The boolean variable `eosfactory.core.setup.is_print_command_line` sets the debug status. For example, if deployment of the contract in the test script `hello_world.py` fails, modify the script:
+Technically, EOSFactory wraps EOSIO executables -- namely `cleos`, `keos`, `nodeos` -- with its own API. Therefore, in error conditions, it makes sense to inspect command lines sent to the EOSIO executables. The boolean variable `eosfactory.core.setup.is_print_command_line` sets the debugging status. For example, if deployment of the contract in the test script `hello_world.py` fails, modify the script:
 
 ```python
         import eosfactory.core.setup as setUp   ## added
