--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -27,8 +27,8 @@ Also, we assume that you have installed [*eosio.cdt*](https://github.com/EOSIO/e
 
 - We assume that you have [*Windows Subsystem for Linux - Ubuntu 18.04*](https://www.microsoft.com/en-us/p/ubuntu-1804/9n9tngvndl3q) installed.
 - Both EOSIO and eosio.cdt are installed to the Windows Ubuntu bash. If you want to compile them from sources, we recommend that they are cloned in the Windows file structure, taking advantage of the fact that the entire Windows file structure is fully accessible in WSL.
-- And finally, we assume you have [Python 3.5](https://www.python.org/downloads/release/python-356/) (or higher) available in your WSL, but this condition is likely to be already satisfied, as WSL ships with Python 3.6.5 by default. Also make sure your WSL has [pip 18.1](https://pypi.org/project/pip/) (or higher) installed.
-- It is advisable to have Python installed on the Windows side, as well: this enables using a linter with the scripts on the Ubuntu side.
+- And finally, we assume you have [Python 3.5](https://www.python.org/downloads/release/python-356/) (or higher) available in your WSL, but this condition is likely to be already satisfied, as WSL ships with Python 3.6.5 by default. Also make sure your WSL has [pip3 18.1](https://pypi.org/project/pip/) (or higher) installed.
+- It is advisable to have Python installed on the Windows side, as well: this enables using a [linter](https://en.wikipedia.org/wiki/Lint_(software)) with the scripts on the Ubuntu side.
 
 ## Python dependencies
 
@@ -165,11 +165,11 @@ pip3 uninstall eosfactory-tokenika
 
 ## Troubleshooting specific errors
 
-### `nodeos --version` error
+### Nodeos version error
 
 There is a bug in `eosio nodeos` executable that makes it to response erratically. 
-The command `python3 -m eosfactory.config` attempts to verify the version of the EOSIO installation -- unsuccessfully quite frequently issuing the following error message:
-  
+The command `python3 -m eosfactory.config` attempts to verify the version of the EOSIO installation, which is quite frequently unsuccessful and results in the following error message:
+
 ```bash
 ERROR!
 Cannot determine the version of the installed 'eosio' package.
@@ -190,8 +190,6 @@ python3 -m eosfactory.config
 As a result, you should get data similar to this:
 
 ```bash
-.......................................
-
 The current configuration of EOSFactory:
 {
     "CONFIG_FILE": "/mnt/c/Workspaces/EOS/eosfactory/config/config.json",
@@ -220,9 +218,6 @@ The current configuration of EOSFactory:
     "WALLET_MANAGER_ADDRESS": "127.0.0.1:8888",
     "WSL_ROOT": "C:/Users/cartman/AppData/Local/Packages/CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc/LocalState/rootfs"
 }
-
-.......................................
-
 ```
 
 Next, note the entries of the value `null`. Some of them signal configuration errors.
@@ -259,9 +254,9 @@ WASM file writen to file:
 /usr/bin/cleos --url http://127.0.0.1:8888 set contract kswquviprmbi /mnt/c/Workspaces/EOS/eosfactory/contracts_windows/_wslqwjvacdyugodewiyd build/_wslqwjvacdyugodewiyd.wasm build/_wslqwjvacdyugodewiyd.abi
 ```
 
-### Verify communication with `cleos`
+### Verify communication with cleos
 
-EOSFactory offers another debugging tool: printing requests send by `cleos` to nodeos, and responses from nodeos. For example, if deployment of the contract in the test script hello_world.py fails, modify the script:
+EOSFactory offers another debugging tool: printing requests send by `cleos` to `nodeos`, and responses from `nodeos`. For example, if deployment of the contract in the test script `hello_world.py` fails, modify the script:
 
 ```python
         import eosfactory.core.setup as setUp   ## added
@@ -274,8 +269,6 @@ EOSFactory offers another debugging tool: printing requests send by `cleos` to n
         setup.is_print_command_line = False     ## added
         setup.is_print_response = False         ## added
 ```
-
-We cannot show the effect of the setup: it is very volume. 
 
 ## Subsequent installations
 
@@ -291,5 +284,3 @@ And then just run:
 ```bash
 ./install.sh
 ```
-I see, you use the contribution from ED Easy-D (Pull request: "Fix unrecognised option 'max-implicit-request' error on startup").
-We will include it to the next distribution of EOSFactory.
