--- a/docs/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
+++ b/docs/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
@@ -27,7 +27,7 @@ from eosfactory.eosf import *
 To create a new contract from a pre-defined template all you need is a name for the contract and the name of the template, for example:
 
 ```python
-project_path = project_from_template("foo", template="hello_world")
+project_path = project_from_template("foo", template="hello_world", remove_existing=True)
 ```
 
 >**NOTE:** Do not use spaces in contract names. What is allowed are letters, numbers, underscores `_`, dots `.` and dashes `- `. Regarding the second parameter, as of now there are three templates to choose from (i.e. `hello_world`, `eosio_token` and `tic_tac_toe`), with more coming in the future. This parameter is optional, the default value is `hello_world`.
@@ -144,6 +144,7 @@ contract_foo.deploy()
 
 ```python
 contract_hello = Contract(host, "hello_world")
+contract_hello.build()
 contract_hello.deploy()
 ```
 
