pip3 install eosfactory-tokenika --user

--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -116,7 +116,7 @@ Instead, the EOSFactory library can be used as a staring point for user's extens
 You can install the PyPi EOSFactory with the `pip3` command:
 
 ```bash
-pip3 install eosfactory
+pip3 install eosfactory-tokenika --user
 ```
 
 The versions, GitHub and PyPi are identical in the code. They differ in their data folders. The configuration of can be printed with the command:
