better codding the issue of global installation, documenting it.

--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -146,6 +146,8 @@ The current configuration of EOSFactory:
 ```
 where the message *EOSFactory is installed as a Python package* indicates the PyPi origin.
 
+>**NOTE:** We propose installing the EOSFactory package locally. It installs itself  globally, as well. If it is global, the tests has to be executed as `sudo`. However, if then `KEOSD` has its wallet account local (`$HOME/eosio-wallet`), it issues a misleading fatal error message, something like `Wallet ``_127_0_0_1_8888_default`` already exists.`. 
+
 ## Uninstalling
 
 Make sure your working directory is switched to `eosfactory`:
