--- a/docs/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
+++ b/docs/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
@@ -68,7 +68,7 @@ Locate the folder containing the new contract (if you're not sure where it is, u
 
 #define DEBUG
 
-#include "logger.hpp"
+#include <eoside/logger.hpp>
 #include "hello.world.hpp"
 
 using namespace eosio;
