--- a/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -49,7 +49,7 @@ The directory of the contract workspace can be seen and set with the command `py
 
 Once the project is open in VSC, you'll see the following file structure:
 
-![file_structure](../images/file_structure.png)
+![](../images/file_structure.png)
 
 What you get is a complete smart-contract workspace with clear separation between smart-contract source code, build output files and unit tests. Everything is set up and ready to be built and unit tested:
 
@@ -174,31 +174,31 @@ To access automated task navigate to the `Tasks` top menu option:
 
 To have your code compiled by the `CLANG` compiler navigate to `Terminal > Run Task > Compile`:
 
-![compile](../images/compile.png)
+![](../images/compile.png)
 
 #### Build
 
 To have your code built by the `WASM` compiler navigate to `Terminal > Run Task > Build`:
 
-![build](../images/build.png)
+![](../images/build.png)
 
 #### Test
 
 To run ad-hoc unit tests navigate to `Terminal > Run Task > Test`:
 
-![test](../images/test.png)
+![](../images/test.png)
 
 #### Unit test
 
 To run standardized unit tests navigate to `Terminal > Run Task > Unittest`:
 
-![unittest](../images/unittest.png)
+![](../images/unittest.png)
 
 ## Use *IntelliSense* in *Visual Studio Code*
 
 You can also make use of VSC [IntelliSense](https://code.visualstudio.com/docs/editor/intellisense) feature. Among other things, it allows you to inspect the context of any code element, including its definition and declaration.
 
-![intelisense](../images/intelisense.png)
+![](../images/intelisense.png)
 
 >**NOTE:** For that to work you'll need to install the C/C++ IntelliSense extension in VSC.
 
