eosio 1.7.1 eosio.cdt 1.61 all-tested

--- a/docs/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
+++ b/docs/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
@@ -63,12 +63,9 @@ print(contract_builder_foo.path())
 Locate the folder containing the new contract (if you're not sure where it is, use the output produced by the `contract_builder_foo.path` method) and edit the `foo.cpp` file in your favorite text editor by commenting out line `18`, i.e. `require_auth( user ) `:
 
 ```cpp
-#include <eosiolib/eosio.hpp>
-#include <eosiolib/print.hpp>
+#include <eosio/eosio.hpp>
+#include <eosio/print.hpp>
 
-#define DEBUG
-
-#include <eoside/logger.hpp>
 #include "hello.world.hpp"
 
 using namespace eosio;
@@ -79,7 +76,6 @@ class hello : public eosio::contract {
 
     [[eosio::action]]
     void hi( account_name user ) {
-      logger_info( "debug user name: ", name{user} );
       //require_auth( user );
       print( "Hello, ", name{user} );
     }
@@ -90,18 +86,6 @@ EOSIO_ABI( hello, (hi) )
 
 
 ## Build the new contract
-
-You can generate ABI and the web assembly code separately:
-
-```python
-contract_builder_foo.build_abi()
-```
-
-```python
-contract_builder_foo.build_wast()
-```
-
-Or you can generate both at the same time:
 
 ```python
 contract_builder_foo.build()
@@ -200,25 +184,12 @@ contract_foo.push_action("hi", {"user":alice}, permission=[(alice, Permission.AC
 
 All the above variations should work, as the contract allows anyone to authorize the `hi` action.
 
->**NOTE:** Among other things, the console displays a debugger output, for example:
-
-```bash
-INFO debug user name: alice @ 12:26:05 hello.world.cpp[17](hi)
-```
-
-This is the result of a `logger_info` clause in the `foo.cpp` file (line `17`):
-
-```cpp
-logger_info( "debug user name: ", name{user} )
-```
-
 ## Modify the code, re-compile & re-deploy
 
 And now let's modify the `hi` method by uncommenting line `18`, so that that contract authenticates the user before further execution:
 
 ```cpp
 void hi( account_name user ) {
-  logger_info( "debug user name: ", name{user} );
   require_auth( user );
   print( "Hello, ", name{user} );
 }
