--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -128,7 +128,7 @@ python3 -m eosfactory.config
 In the printout, you'll see a note about the nature of the active package:
 
 ```bash
-EOSFactory version 3.0.6.
+EOSFactory version 3.1.0.
 Dependencies:
 https://github.com/EOSIO/eos version 1.7.1
 https://github.com/EOSIO/eosio.cdt version 1.6.1
@@ -196,7 +196,7 @@ python3 -m eosfactory.config
 As a result, you should get data similar to this:
 
 ```bash
-EOSFactory version 3.0.6.
+EOSFactory version 3.1.0.
 Dependencies:
 https://github.com/EOSIO/eos version 1.7.1
 https://github.com/EOSIO/eosio.cdt version 1.6.1
@@ -275,8 +275,8 @@ Technically, EOSFactory wraps EOSIO executables -- namely `cleos`, `keos`, `node
 ```python
         import eosfactory.core.setup as setUp   ## added
         setup.is_print_command_line = True      ## added
-        contract.build()
-        contract.deploy()
+        smart.build()
+        smart.deploy()
         setup.is_print_command_line = False     ## added
 ```
 
@@ -300,8 +300,8 @@ EOSFactory offers another debugging tool: printing requests send by `cleos` to `
         setup.is_print_command_line = True      ## added
         setup.is_print_request = True           ## added
         # setup.is_print_response = True        ## volume printout
-        contract.build()
-        contract.deploy()
+        smart.build()
+        smart.deploy()
         setup.is_print_request = False          ## added
         setup.is_print_command_line = False     ## added
         setup.is_print_response = False         ## added
