--- a/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -139,13 +139,13 @@ create_account("host", master)
 And then create a reference to the contract by supplying the host account and the path to the folder where the contract is located, for example:
 
 ```python
-contract = Contract(host, "/mnt/d/Workspaces/EOS/eosfactory/contracts/eosio_token")
+smart = Contract(host, "/mnt/d/Workspaces/EOS/eosfactory/contracts/eosio_token")
 ```
 
 Alternatively, supply just the name of the folder, if it can be found in the standard location, i.e. `eosfactory/contracts`, for example:
 
 ```python
-contract = Contract(host, "eosio_token")
+smart = Contract(host, "eosio_token")
 ```
 
 ## Build the contract
@@ -153,7 +153,7 @@ contract = Contract(host, "eosio_token")
 Before deploying the contract needs to be built from the source code. To build the contract invoke its `build()` method:
 
 ```python
-contract.build()
+smart.build()
 ```
 
 ## Deploy the contract
@@ -167,7 +167,7 @@ contract.code()
 To deploy the contract use its `deploy()` method:
 
 ```python
-contract.deploy()
+smart.deploy()
 ```
 
 And now you can verify that the hash of the deployed code is non-zero:
