teos build improved. All tested

--- a/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -161,7 +161,7 @@ smart.build()
 At this stage the contract has no code deployed. You can check it by running its `code()` method:
 
 ```python
-contract.code()
+smart.code()
 ```
 
 To deploy the contract use its `deploy()` method:
@@ -173,7 +173,7 @@ smart.deploy()
 And now you can verify that the hash of the deployed code is non-zero:
 
 ```python
-contract.code()
+smart.code()
 ```
 
 ## Create the token
