--- a/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -53,10 +53,10 @@ Once the project is open in VSC, you'll see the following file structure:
 
 What you get is a complete smart-contract workspace with clear separation between smart-contract source code, build output files and unit tests. Everything is set up and ready to be built and unit tested:
 
-- `src` directory, the `cpp` and `hpp` files are there.
+- `src` directory, the `cpp` files are there.
+- `include` directory, the `hpp` files are there.
 - `test` directory, test scripts are there.
-- `resources` directory, everything that does not fit to the previous two
-  places goes there. It may contain the Ricardian contract files.
+- `ricardian` contains the Ricardian contract files.
 - `.vscode` directory that contains *IntelliSense* definitions, task 
   definitions, etc.
 - `CMakeLists.txt` file, CMake definitions.
