--- a/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -12,7 +12,7 @@ The purpose of this tutorial is to demonstrate how *EOSFactory* and its Python C
 Open a bash terminal (or if you are on Windows, open an Ubuntu bash terminal supplied by *Windows Subsystem for Linux*) and run Python CLI:
 
 ```bash
-python3
+python3_1
 ```
 
 Once in the Python shell, import the *EOSFactory* library:
