tutorial moved to docs

--- a/docs/tutorials/06.UsingEOSFactoryWithExistingProject.md
+++ b/docs/tutorials/06.UsingEOSFactoryWithExistingProject.md
@@ -1,10 +1,10 @@
 # Using EOSFactory With an Existing EOS Smart-Contract Project
 
-The purpose of this tutorial is to demonstrate how to apply EOSFactory to an existing EOS smart-contract project with an arbitrary folder structure.
+The purpose of this tutorial is to demonstrate how to apply *EOSFactory* to an existing EOS smart-contract project with an arbitrary folder structure.
 
-## Assumptions
+## Prerequisites
 
-* You have successfully installed EOSFactory on your machine, including all its dependencies, such as Python, PIP and EOSIO. For further details please refer to [this guide](https://eosfactory.io/build/html/tutorials/01.InstallingEOSFactory.html).
+* You have successfully installed *EOSFactory* on your machine, including all its dependencies, such as Python, PIP and EOSIO. For further details please refer to [this guide](https://eosfactory.io/build/html/tutorials/01.InstallingEOSFactory.html).
 * Your smart-contract project is located inside a folder named `foo_project`.
 * Your smart-contract's C++ source code is contained in a file named `foo_source.cpp`, located anywhere inside the `foo_project` folder (it can also be located in a subfolder inside the `foo_project` folder).
 * If your project requires a C++ header file, it's contained in a file named `foo_header.hpp`, located anywhere inside the `foo_project` folder (it can also be located in a subfolder inside the `foo_project` folder).
@@ -12,13 +12,13 @@ The purpose of this tutorial is to demonstrate how to apply EOSFactory to an exi
 
 **NOTE:** Obviously, `foo_project`, `foo_source`, `foo_header` and `foo_test` are placeholders - they can be replaced by any names you prefer.
 
-**NOTE:** We assume there is only one C++ source code file (i.e. an  `*.cpp` file) within the `foo_project` folder. If your project for some reasons requires more than one `*.cpp` file, EOSFactory can handle this situation but it requires a more complex setup, which is beyond the scope of this guide.
+**NOTE:** We assume there is only one C++ source code file (i.e. an  `*.cpp` file) within the `foo_project` folder. If your project for some reasons requires more than one `*.cpp` file, *EOSFactory* can handle this situation but it requires a more complex setup, which is beyond the scope of this guide.
 
 ## Create a test script
 
 A test scenario contained in the `foo_test.py` file needs to be expressed as a  Python script.
 
-Firstly, make sure the `foo_test.py` file contains the EOSFactory import clause:
+Firstly, make sure the `foo_test.py` file contains the *EOSFactory* import clause:
 
 ```
 from eosfactory.eosf import *
@@ -78,7 +78,7 @@ python3 /path/to/your/test/scripts/foo_test.py
 
 ## Interact with your contract
 
-If you want to manually interact with your smart-contract via EOSFactory, first run the Python CLI:
+If you want to manually interact with your smart-contract via *EOSFactory*, first run the Python CLI:
 
 ```
 python3
