--- a/docs/tutorials/06.UsingEOSFactoryWithExistingProject.md
+++ b/docs/tutorials/06.UsingEOSFactoryWithExistingProject.md
@@ -18,22 +18,22 @@ The purpose of this tutorial is to demonstrate how to apply *EOSFactory* to an e
 
 A test scenario contained in the `foo_test.py` file needs to be expressed as a  Python script.
 
-Firstly, make sure the `foo_test.py` file contains the *EOSFactory* import clause:
+Firstly, make sure the `foo_test.py` file contains the following import clause:
 
 ```
 from eosfactory.eosf import *
 ```
 
-Secondly, make sure the `foo_test.py` file defines the  `PROJECT_DIR` constant as a string equal to the absolute path to the `foo_project` folder, i.e. it contains an expression like this:
+Secondly, make sure the `foo_test.py` file defines a string constant named `PROJECT_DIR` equal to the absolute path of the `foo_project` folder, i.e. it contains an expression like this:
 
 ```
-PROJECT_DIR = "/path/to/the/foo_project/folder/"
+PROJECT_DIR = "/path/to/foo_project/"
 ```
 
-Note that the `PROJECT_DIR` constant is needed because it is then used to define the variable that holds reference to the contract:
+Note that the `PROJECT_DIR` constant is needed because it is then used to define the variable that holds a reference to the contract:
 
 ```
-contract = Contract(host, PROJECT_DIR)
+c = Contract(host, PROJECT_DIR)
 ```
 
 And here is a complete (yet trivial) example of a valid `foo_test.py` file:
@@ -91,7 +91,7 @@ from eosfactory.eosf import *
 reset()
 create_master_account("master")
 create_account("host", master)
-c = Contract(host, "/path/to/the/foo_project/folder/")
+c = Contract(host, "/path/to/foo_project/")
 c.build()
 c.deploy()
 ```
