--- a/docs/tutorials/06.UsingEOSFactoryWithExistingProject.md
+++ b/docs/tutorials/06.UsingEOSFactoryWithExistingProject.md
@@ -30,7 +30,7 @@ Secondly, make sure the `foo_test.py` file defines a string constant named `PROJ
 PROJECT_DIR = "/path/to/foo_project/"
 ```
 
-Note that the `PROJECT_DIR` constant is needed because it is then used to define the variable that holds a reference to the contract:
+Note that the `PROJECT_DIR` constant is needed because it is then used to define a variable that holds a reference to the contract:
 
 ```
 c = Contract(host, PROJECT_DIR)
